--- a/src/app/job/jobs.html
+++ b/src/app/job/jobs.html
@@ -1,14 +1,15 @@
 <ion-view>
     <ion-content padding="true" class="has-header job-list">
-        <ul>
-            <li ng-repeat="j in vm.jobs track by $index">
+        <ion-refresher pulling-text="Pull to refresh..." on-refresh="vm.refreshList()">
+        </ion-refresher>
+        <ion-list>
+            <ion-item ng-repeat="j in vm.jobs track by $index">
                 <span class="job-name">Job {{$index + 1}}</span>
                 <br>
                 <span>Size: {{j.size}}</span>
                 <br>
                 <span>Job created: {{j.createdAt | amDateFormat: 'DD/MM/YYYY [at] hA'}}</span>
-                <span class="job-button">></span>
-            </li>
-        </ul>
+            </ion-item>
+        </ion-list>
     </ion-content>
 </ion-view>
