--- a/src/app/job/my.jobs.html
+++ b/src/app/job/my.jobs.html
@@ -3,7 +3,7 @@
         <ion-refresher pulling-text="Pull to refresh..." on-refresh="vm.refreshList()">
         </ion-refresher>
         <ion-list>
-            <ion-item ng-repeat="j in vm.jobs track by $index" ng-click="vm.selectJob(j)">
+            <ion-item ng-repeat="j in vm.myJobs track by $index">
                 <span class="job-name">Job {{$index + 1}}</span>
                 <br>
                 <span>Size: {{j.size}}</span>
