PB-48 job details page with logic added

--- a/src/app/job/job.details.html
+++ b/src/app/job/job.details.html
@@ -12,7 +12,7 @@
             </ion-item>
             <ion-item>
                 <div>
-                    <button ion-button full ng-click="vm.cancelJob()">Sign In</button>
+                    <button ion-button full ng-click="vm.cancelJob()">Cancel job</button>
                 </div>
             </ion-item>
         </ion-list>
