--- a/src/app/auth/auth.login.html
+++ b/src/app/auth/auth.login.html
@@ -1,21 +1,19 @@
-<div class="padding-top" ng-controller="authController as vm">
-    <ion-list>
-        <ion-item>
-            <label class="item item-input">
-                <span class="input-label">Username</span>
-                <input type="text" ng-model="vm.user.username">
-            </label>
-        </ion-item>
-        <ion-item>
-            <label class="item item-input">
-                <span class="input-label">Password</span>
-                <input type="password" ng-model="vm.user.password">
-            </label>
-        </ion-item>
-        <ion-item>
-            <div>
-                <button ion-button full ng-click="vm.loginUser()">Sign In</button>
-            </div>
-        </ion-item>
-    </ion-list>
+<div class="log-in" ng-controller="authController as vm">
+    <div class="image">
+        <img src="/images/logo.png" alt="logo">
+    </div>
+    <div class="title">
+        <h1>PBox</h1>
+    </div>
+    <div class="list">
+        <label class="item item-input">
+            <input type="text" placeholder="Username" ng-model="vm.user.username">
+        </label>
+        <label class="item item-input">
+            <input type="password" placeholder="Password" ng-model="vm.user.password">
+        </label>
+    </div>
+    <button class="button button-block" ng-click="vm.loginUser()">
+        Log In
+    </button>
 </div>
