--- a/src/assets/scss/_login.scss
+++ b/src/assets/scss/_login.scss
@@ -2,6 +2,7 @@
     background-color: #3F5877;
     .image {
         text-align: center;
+        margin-top: 40px;
     }
     .title {
         text-align: center;
