PB-50 unassign feature added

--- a/src/app/job/job.details.html
+++ b/src/app/job/job.details.html
@@ -12,7 +12,8 @@
             </ion-item>
             <ion-item>
                 <div>
-                    <button ion-button full ng-click="vm.cancelJob()">Cancel job</button>
+                    <button ion-button color="danger" ng-click="vm.cancelJob()">Cancel job</button>
+                    <button ion-button ng-click="vm.unassignFromJob()">Un-assign</button>
                 </div>
             </ion-item>
         </ion-list>
