PB-53-complete-button-added-with-logic

--- a/src/app/job/job.details.html
+++ b/src/app/job/job.details.html
@@ -14,6 +14,7 @@
                 <div>
                     <button ion-button color="danger" ng-click="vm.cancelJob()">Cancel job</button>
                     <button ion-button ng-click="vm.unassignFromJob()">Un-assign</button>
+                    <button ion-button ng-click="vm.completeJob()">Complete</button>
                 </div>
             </ion-item>
         </ion-list>
