--- a/src/app/auth/auth.login.html
+++ b/src/app/auth/auth.login.html
@@ -13,7 +13,7 @@
             <input type="password" placeholder="Password" ng-model="vm.user.password">
         </label>
     </div>
-    <button class="button button-block" ng-click="vm.loginUser()">
+    <button class="button button-block button-main" ng-click="vm.loginUser()">
         Log In
     </button>
 </div>
