--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -37,3 +37,16 @@ button.button.button-main {
 .has-header {
     top: $header_height !important;
 }
+
+ion-item.item {
+    background-color: transparent;
+    color: #fff;
+}
+
+.spinner-ios, .spinner-ios-small {
+    stroke: $secondary_color !important;
+}
+.spinner {
+    stroke: $secondary_color !important;
+    fill: $secondary_color !important;
+}
