--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,4 +1,5 @@
 $primary_color: #33CBCC;
 $secondary_color: #FFFFFF;
 $background_primary_color: #3F5877;
+$background_secondary_color: #FFFFFF;
 $header_height: 55px;
