PB-44 job list directive implemented

--- a/src/app/job/job.details.html
+++ b/src/app/job/job.details.html
@@ -1,5 +1,5 @@
 <ion-view>
-    <ion-content padding="true" class="has-header job-list">
+    <ion-content class="has-header job-list">
         <ion-list>
             <ion-item>
                <span>Name  {{vm.job.name}}</span>
