--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -28,10 +28,15 @@ ion-header-bar {
     }
 }
 
-button.button.button-main {
+.button.button-main {
     border-radius: 0;
     background-color: $primary_color;
     color: $secondary_color;
+}
+
+.list .item .item-options .button .button-icon {
+    font-size: 25px;
+    width: 100%;
 }
 
 .has-header {
@@ -43,9 +48,11 @@ ion-item.item {
     color: #fff;
 }
 
-.spinner-ios, .spinner-ios-small {
+.spinner-ios,
+.spinner-ios-small {
     stroke: $secondary_color !important;
 }
+
 .spinner {
     stroke: $secondary_color !important;
     fill: $secondary_color !important;
