--- a/src/app/job/jobs.html
+++ b/src/app/job/jobs.html
@@ -1,9 +1,7 @@
-<ion-view>
-    <ion-content padding="true" class="has-header job-list">
+<ion-view class="jobs-list">
+    <ion-content class="has-header job-list">
         <ion-refresher pulling-text="Pull to refresh..." on-refresh="vm.refreshList()">
         </ion-refresher>
-        <ion-list>
-            <ion-item ng-repeat="j in vm.jobs track by $index" ng-click="vm.selectJob(j)" ng-include="'app/job/job.item.html'"></ion-item>
-        </ion-list>
+        <job-list jobs="vm.jobs" swipe-actions="vm.jobActions" on-job-click="vm.selectJob"></job-list>
     </ion-content>
 </ion-view>
