--- a/src/app/navigation/navigation.html
+++ b/src/app/navigation/navigation.html
@@ -2,8 +2,8 @@
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
 </ion-nav-buttons>
 <ion-nav-title>
-    <h1 class="title">PBox Courier</h1>
+    <h1 class="title">{{ current_state.title ? current_state.title : 'Pbox Courier' }}</h1>
 </ion-nav-title>
 <ion-nav-buttons side="right">
-    <button ng-show="!(current_state.data && current_state.data.disableBack)" class="button button-icon icon ion-arrow-return-left" ng-click="vm.back()"></button>
+    <button ng-show="!(current_state.data && current_state.data.disableBack)" class="button button-icon icon ion-chevron-left" ng-click="vm.back()"></button>
 </ion-nav-buttons>
