PB-44 Infinitive scroll on job lists added

--- a/src/app/job/jobs.html
+++ b/src/app/job/jobs.html
@@ -2,6 +2,6 @@
     <ion-content class="has-header job-list">
         <ion-refresher pulling-text="Pull to refresh..." on-refresh="vm.refreshList()">
         </ion-refresher>
-        <job-list jobs="vm.jobs" swipe-actions="vm.jobActions" on-job-click="vm.selectJob"></job-list>
+        <job-list jobs="vm.jobs" swipe-actions="vm.jobActions"></job-list>
     </ion-content>
 </ion-view>
