--- a/src/app/job/my.jobs.html
+++ b/src/app/job/my.jobs.html
@@ -2,6 +2,6 @@
     <ion-content class="has-header job-list">
         <ion-refresher pulling-text="Pull to refresh..." on-refresh="vm.refreshList()">
         </ion-refresher>
-        <job-list jobs="vm.jobs" on-job-click="vm.openJob"></job-list>
+        <job-list jobs="vm.jobs" on-job-click="vm.openJob" swipe-actions="vm.swipeActions"></job-list>
     </ion-content>
 </ion-view>
