Small adoptation for android native device

--- a/src/app/auth/auth.login.html
+++ b/src/app/auth/auth.login.html
@@ -1,6 +1,6 @@
 <div class="log-in" ng-controller="authController as vm">
     <div class="image">
-        <img src="/images/logo.png" alt="logo">
+        <img src="images/logo.png" alt="logo">
     </div>
     <div class="title">
         <h1>PBox</h1>
