--- a/src/app/navigation/side.menu.html
+++ b/src/app/navigation/side.menu.html
@@ -15,4 +15,12 @@
          Logout
         <span class="nav-button ion-power"></span>
     </ion-item>
+    <ion-item>
+        <span class="ion-location"></span>
+        {{ current_location.latitude }}, {{ current_location.longitude }}
+    </ion-item>
+    <ion-item>
+        <span class="ion-information-circled"></span>
+        {{ current_location.message }}
+    </ion-item>
 </ion-list>
