PB-55 map view for the job

--- a/src/app/job/job.list.html
+++ b/src/app/job/job.list.html
@@ -14,5 +14,5 @@
         </ion-option-button>
     </ion-item>
 </ion-list>
-<ion-infinite-scroll on-infinite="loadMoreJobs()" distance="1%">
-</ion-infinite-scroll>
+<!--<ion-infinite-scroll on-infinite="loadMoreJobs()" distance="1%">
+</ion-infinite-scroll>-->
