--- a/src/assets/scss/_job.scss
+++ b/src/assets/scss/_job.scss
@@ -1,9 +1,44 @@
+.job-details {
+    .head {
+        h2,
+        h3 {
+            color: $primary_color;
+        }
+        p {
+            color: $secondary_color;
+            margin-bottom: 0;
+        }
+    }
+    .scroll {
+        height: 100%;
+        .job-map {
+            height: 36%;
+            width: 100%;
+            .map-container {
+                width: 100%;
+                height: 100%;
+            }
+        }
+        .job-info {
+            height: 50%;
+            width: 100%;
+        }
+    }
+    .list .item {
+        background-color: $background_primary_color;
+        color: $secondary_color;
+        font-size: 14px;
+        padding: 10px;
+        border-color: $primary_color;
+    }
+}
+
 .job-map {
-	.scroll {
-		height: 100%;
-		.map-container {
-			width: 100%;
-			height: 100%;
-		}
-	}
+    .scroll {
+        height: 100%;
+        .map-container {
+            width: 100%;
+            height: 100%;
+        }
+    }
 }
