--- a/src/app/job/job.list.html
+++ b/src/app/job/job.list.html
@@ -3,10 +3,13 @@
         <img ng-src="images/logo.png">
         <h2>{{ j.name }}</h2>
         <p>
-            {{j.status}} | SIZE {{j.size}}
+            {{ j.status }} | SIZE {{ j.size }}
         </p>
         <p>
-            <span>Job created: {{j.createdAt | amDateFormat: 'DD/MM/YYYY [at] hA'}}</span>
+            <span>Job created: {{ j.createdAt | amDateFormat: 'DD/MM/YYYY [at] hA' }}</span>
+        </p>
+        <p>
+            <span>{{ j.pickup.address }}</span>
         </p>
         <ion-option-button ng-if="j.status != 'CANCELED'" ng-repeat="sa in swipeActions track by $index" class="{{sa.button}}" ng-click="actionClicked(j, $index, $event)">
             <span class="button-icon {{sa.icon}}" ng-if="!sa.text"></span>
