--- a/src/assets/scss/_input.form.scss
+++ b/src/assets/scss/_input.form.scss
@@ -6,7 +6,11 @@
 
     input {
         width: 100%;
+        height: 45px;
         border: 1px solid $primary_color;
         background-color: $background_primary_color;
+        color: white;
+        padding-left: 10px;
+        padding-right: 10px;
     }
 }
