--- a/src/app/job/job.map.html
+++ b/src/app/job/job.map.html
@@ -1,5 +1,5 @@
 <ion-view class="job-map">
     <ion-content>
-        <map-pane map-options="vm.mapOptions" map-markers="vm.mapMarkers" draw-directions="true"></map-pane>
+        <map-pane map-options="vm.mapOptions" map-markers="vm.mapMarkers" draw-directions="true" colors-array="vm.markerColors"></map-pane>
     </ion-content>
 </ion-view>
