--- a/src/assets/scss/_input.form.scss
+++ b/src/assets/scss/_input.form.scss
@@ -4,7 +4,34 @@
     width: 90%;
     margin-left: 5%;
 
+    .select-control {
+        margin-top: -1px;
+        width: 100%;
+        height: 45px;
+        border: 1px solid $primary_color;
+        background-color: $background_primary_color;
+        color: white;
+        padding-left: 10px;
+        padding-right: 10px;
+        label {
+            position: relative;
+            top: 10px;
+        }
+        select {
+            position: relative;
+            right: -215px;
+            top: 10px;
+            border: none;
+            background-color: $background_primary_color;
+            color: white;
+            li:hover {
+                background-color:$primary_color;
+            }
+        }
+    }
+
     input {
+        margin-top: -1px;
         width: 100%;
         height: 45px;
         border: 1px solid $primary_color;
