--- a/src/app/shared/pbox.select.html
+++ b/src/app/shared/pbox.select.html
@@ -1,6 +1,9 @@
-<div>
-    <div class="selected-field" ng-click="activate()">{{modelValue}}</div>   
-    <div class="drop-down" ng-show="{{active}}">
-        <span ng-repeat="item in pbOptions" ng-click="deactivate({{item.value}})">{{item.name}}</span>
+<div class="select-control">
+    <label>{{pbLabel}}</label>       
+    <div class="select-list">
+        <div class="selected-field">{{modelValue}}<span ng-click="activate()" class="ion-chevron-down"/></div>   
+        <div class="drop-down" ng-show="active">
+            <div class="drop-down-item" ng-repeat="item in pbOptions" ng-click="deactivate(item.value)">{{item.name}}</div>
+        </div>
     </div>
 </div>
