PB-4 edit screen completed

--- a/src/app/job/job.edit.html
+++ b/src/app/job/job.edit.html
@@ -2,12 +2,12 @@
     <ion-content>
         <div class="input-form">
             <pbox-select pb-label="'Box size'" pb-options="vm.sizeOptions" ng-model="vm.job.size"></pbox-select>
-            <input type="text" placeholder="Destination Country" ng-model="vm.job.destination.country" />
-            <input type="text" placeholder="Destination City" ng-model="vm.job.destination.city" />
-            <input type="text" placeholder="Destination Street" ng-model="vm.job.destination.street" />
-            <input type="text" placeholder="Destination House Number" ng-model="vm.job.destination.houseNumber" />
-            <input type="text" placeholder="Receiver Name" ng-model="vm.job.destination.receiverName" />
-            <input type="text" placeholder="Receiver Phone" ng-model="vm.job.destination.receiverPhone" />
+            <input type="text" placeholder="Destination Country" ng-model="vm.jobCountry" />
+            <input type="text" placeholder="Destination City" ng-model="vm.jobCity" />
+            <input type="text" placeholder="Destination Street" ng-model="vm.jobDestinationStreet" />
+            <input type="text" placeholder="Destination House Number" ng-model="vm.jobHouseNumber" />
+            <input type="text" placeholder="Receiver Name" ng-model="vm.job.receiverName" />
+            <input type="text" placeholder="Receiver Phone" ng-model="vm.job.reciverPhone" />
             <button class="button button-main button-block" ng-click="vm.save()">Save</button> 
         </div>
     </ion-content>
