--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -3,3 +3,4 @@ $secondary_color: #FFFFFF;
 $background_primary_color: #3F5877;
 $background_secondary_color: #FFFFFF;
 $header_height: 55px;
+$battery_icon_color: #33CBCC;
