PB-73 Assign Box to the Job by scanning bar/qr code, in progress

--- a/src/app/job/job.add.box.html
+++ b/src/app/job/job.add.box.html
@@ -2,7 +2,8 @@
     <ion-content>
         <div class="input-form">
             <input type="text" placeholder="Box ID" ng-model="vm.boxId" />
-            <button class="button button-main button-block" ng-click="vm.assaginBox()">Save</button> 
+            <button class="button button-main button-block" ng-click="vm.assaginBox()">Save</button>
+            <qr-scanner width="400" height="300" ng-success="vm.onSuccess(data)" ng-error="vm.onError(error)" />
         </div>
     </ion-content>
 </ion-view>
