PB-73 css added

--- a/src/app/job/job.add.box.html
+++ b/src/app/job/job.add.box.html
@@ -3,7 +3,7 @@
         <div class="input-form">
             <input type="text" placeholder="Box ID" ng-model="vm.boxId" />
             <button class="button button-main button-block" ng-click="vm.assignBox()">Save</button>
-            <div ng-if="!vm.isCordovaApp">
+            <div class="scanner" ng-if="!vm.isCordovaApp">
                 <qr-scanner width="400" height="300" ng-success="vm.onSuccess(data)" ng-error="vm.onError(error)" />
             </div>
             <div ng-if="vm.isCordovaApp">
