--- a/src/assets/scss/_input.form.scss
+++ b/src/assets/scss/_input.form.scss
@@ -3,9 +3,8 @@
     position: relative;
     width: 90%;
     margin-left: 5%;
-
     .select-control {
-        position:relative;
+        position: relative;
         margin-top: -1px;
         width: 100%;
         height: 45px;
@@ -19,7 +18,7 @@
             top: 10px;
         }
         .select-list {
-            position: absolute;           
+            position: absolute;
             top: 0;
             right: 0;
             display: inline-block;
@@ -31,14 +30,13 @@
             background-color: $background_primary_color;
             color: white;
             .selected-field {
-                .ion-chevron-down{
+                .ion-chevron-down {
                     position: absolute;
                     top: 0px;
                     right: 5px;
                     color: $primary_color;
-                }          
+                }
             }
-
             .drop-down {
                 top: 43px;
                 right: 0;
@@ -47,13 +45,10 @@
                 width: 63px;
                 background-color: $background_primary_color;
                 border: 1px solid $primary_color;
-                .drop-down-item {
-                    
-                }
+                .drop-down-item {}
             }
         }
     }
-
     input {
         margin-top: -1px;
         width: 100%;
@@ -63,5 +58,10 @@
         color: white;
         padding-left: 10px;
         padding-right: 10px;
+    }
+    .scanner {
+        width: 100%;
+        height: 100%;
+        text-align: center;
     }
 }
