PB-93 box status polling implemented

--- a/src/app/job/job.details.html
+++ b/src/app/job/job.details.html
@@ -29,7 +29,7 @@
                 <li class="item">
                      Box status <span class="highlight">{{ vm.box.status ? vm.box.status : 'box is not assigned'}}</span>
                 </li>
-                <li class="item">
+                <li ng-show="vm.box.status == 'ACTIVE'"class="item">
                      Battery <span class="highlight">{{ vm.box.battery_sensor.value.percentage ? vm.box.battery_sensor.value.percentage : 'data unavailable'}}</span> <span class="battery-icon"><ion-icon ng-if="!!vm.box.battery_sensor.value && vm.box.battery_sensor.value.charging == 1" class="ion-flash"></ion-icon></span>
                 </li>                
             </ul>
