QR scanner layout fixed

--- a/src/app/job/job.add.box.html
+++ b/src/app/job/job.add.box.html
@@ -1,14 +1,12 @@
 <ion-view>
     <ion-content>
         <div class="input-form">
-            <input type="text" placeholder="Box ID" ng-model="vm.boxId" />
-            <button class="button button-main button-block" ng-click="vm.assignBox()">Save</button>
             <div class="scanner" ng-if="!vm.isCordovaApp">
-                <qr-scanner width="400" height="300" ng-success="vm.onSuccess(data)" ng-error="vm.onError(error)" />
+                <qr-scanner ng-success="vm.onSuccess(data)" ng-error="vm.onError(error)" />
             </div>
-            <div ng-if="vm.isCordovaApp">
-                <button class="button button-main button-block" ng-click="vm.scanBarcode()">Scan</button>
-            </div>
+            <input type="text" placeholder="Box ID" ng-model="vm.boxId" />
+            <button ng-if="vm.isCordovaApp" class="button button-main button-block" ng-click="vm.scanBarcode()">Scan</button>
+            <button class="button button-main button-block" ng-click="vm.assignBox()">Save</button>
         </div>
     </ion-content>
 </ion-view>
