--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,6 +1,7 @@
-$primary_color: #33CBCC;
-$secondary_color: #FFFFFF;
-$background_primary_color: #3F5877;
-$background_secondary_color: #FFFFFF;
+$primary_color: #33cbcc;
+$secondary_color: #fff;
+$background_primary_color: #3f5877;
+$background_secondary_color: #fff;
 $header_height: 55px;
-$battery_icon_color: #33CBCC;
+$battery_icon_color: #33cbcc;
+$white: #fff;
