--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,8 +1,9 @@
-@import "_variables";
-@import "_layout";
-@import "_login";
-@import "_job";
-@import "_jobs";
-@import "_side.menu";
-@import "_popup";
-@import "_input.form.scss"
+@import '_variables';
+@import '_side.menu';
+@import '_popup';
+@import '_login';
+@import '_layout';
+@import '_jobs';
+@import '_job';
+@import '_input.form.scss';
+
