--- a/src/assets/scss/_jobs.scss
+++ b/src/assets/scss/_jobs.scss
@@ -30,11 +30,18 @@
       }
     }
   }
-  .item.activated,
-  .item-complex.activated,
-  .item.activated .item-content,
-  .item-complex.activated .item-content {
-    background-color: $background_primary_color;
-    border-color: $primary_color;
+  .item {
+    &.activated {
+      .item-content {
+        background-color: $background_primary_color;
+        border-color: $primary_color;
+      }
+    }
+  }
+  .item-complex {
+    &.activated {
+      background-color: $background_primary_color;
+      border-color: $primary_color;
+    }
   }
 }
