--- a/src/assets/scss/_side.menu.scss
+++ b/src/assets/scss/_side.menu.scss
@@ -1,15 +1,15 @@
 .side-menu {
-  ion-item.item.menu-item {
+  .menu-item {
     background-color: $background_secondary_color;
     border-bottom: 0;
     border-top: 2px solid $primary_color;
     color: $primary_color;
     font-weight: 600;
     position: relative;
-  }
-  ion-item.item.menu-item .nav-button {
-    position: absolute;
-    right: 15px;
+    .nav-button {
+      position: absolute;
+      right: 15px;
+    }
   }
   .user-img {
     background: $background_secondary_color;
