--- a/src/app/job/job.details.html
+++ b/src/app/job/job.details.html
@@ -22,16 +22,16 @@
                     Destination at <span class="highlight">{{ vm.job.destination.address ? vm.job.destination.address : 'not yet available' }}</span>
                 </li>
 
-                 <li class="item">
+                <li class="item">
                     Box code <span class="highlight">{{ vm.box.code ? vm.box.code : 'box is not assigned'}}</span>
                 </li>
 
                 <li class="item">
-                     Box status <span class="highlight">{{ vm.box.status ? vm.box.status : 'box is not assigned'}}</span>
+                    Box status <span class="highlight">{{ vm.box.status ? vm.box.status : 'box is not assigned'}}</span>
                 </li>
-                <li ng-show="vm.box.status == 'ACTIVE'"class="item">
-                     Battery <span class="highlight">{{ vm.box.battery_sensor.value.percentage ? vm.box.battery_sensor.value.percentage : 'data unavailable'}}</span> <span class="battery-icon"><ion-icon ng-if="!!vm.box.battery_sensor.value && vm.box.battery_sensor.value.charging == 1" class="ion-flash"></ion-icon></span>
-                </li>                
+                <li ng-show="vm.box.status == 'ACTIVE'" class="item">
+                    Battery <span class="highlight">{{ vm.box.batterySensor.value.percentage ? vm.box.batterySensor.value.percentage : 'data unavailable'}}</span> <span class="battery-icon"><ion-icon ng-if="!!vm.box.batterySensor.value && vm.box.batterySensor.value.charging == 1" class="ion-flash"></ion-icon></span>
+                </li>
             </ul>
         </div>
     </ion-content>
